# shairplay-rust

./: .gitignore  AP2-REMOTE.md  AP2-STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VIDEO-RESEARCH.md  airport.key  release-please-config.json
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
.kiro/steering/: coding.md  kiro-rules.md  project.md  protocol.md  workflow.md
crates/fairplay-garble/: Cargo.toml
crates/fairplay-garble/src/: lib.rs  tests.rs
examples/: player.rs
examples/player/: main.rs  video_display.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_http.rs  fuzz_plist.rs  fuzz_rtp.rs  fuzz_sdp.rs
src/: error.rs  lib.rs
src/codec/: aac.rs  alac.rs  mod.rs  resample.rs
src/crypto/: aes.rs  chacha_transport.rs  fairplay.rs  fairplay_garble.rs  fairplay_tables.rs  mod.rs  pairing.rs  pairing_homekit.rs  rsa.rs  tlv.rs  video_cipher.rs
src/dacp/: mod.rs
src/net/: features.rs  mdns.rs  mod.rs  ptp.rs  server.rs
src/proto/: digest.rs  dmap.rs  http.rs  mod.rs  plist.rs  sdp.rs
src/raop/: buffer.rs  buffered_audio.rs  connection.rs  event_channel.rs  handlers.rs  handlers_ap1.rs  handlers_ap2.rs  handlers_hls.rs  hls.rs  mod.rs  ntp.rs  realtime_audio.rs  rtp.rs  rtsp.rs  server.rs  types.rs  video.rs  video_stream.rs
src/util/: base64.rs  mod.rs
tests/: integration.rs  unit_tests.rs
